# hugging-face-deep-rl

./: .gitignore  00_cartpole.ipynb  01_lunar_lander.ipynb  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yaml
notebooks/: 01_lunar_lander.ipynb  02_frozen_lake_q_learning.ipynb  03_atari_deep_ql.ipynb
src/: hf.py  utils.py
src/rlcourse/: gymnasium_utils.py  hf_utils.py  notifier.py  system_setup.py
tests/: conftest.py  test_notifier.py
tests/integration/: test_hf_integration.py
tests/manual/: demo_notifier.py
tests/unit/: test_gymnasium.py  test_gymnasium_utils.py  test_hf_utils.py
tests_manual/: demo_notifier.py
