[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlcourse"
version = "0.1.0"
dependencies = [
    "gymnasium[classic-control,box2d,other]",
    "stable-baselines3",
    "huggingface_hub",
    "opencv-python",
    "imageio[ffmpeg]",
]

[project.optional-dependencies]
dev = ["pytest"]